# ai-market

./: .gitignore  README.md  pyproject.toml  rules.md
data/raw/: sample.csv
docs/: MCP_SETUP.md
docs/databook/: rfsd_databook_ru.xlsx
docs/requirements/: RFSD_Project_Summary.docx  Давай перейдем к следующему этапу.docx  Как разверунить сервер с llm.docx  Пример вывода 1.docx  Пример вывода 2.docx  Структурированное резюме текущей переписки пользователя с ассистентом.docx  калькулятор токенов.xlsx  переписка с чат.docx
exports/: debug_profile_7722514880_2023.xlsx  rfsd_profile_7722514880.xlsx  test_revenue_7722514880.xlsx
notebooks/: README_COLAB.md  llm_server_colab.ipynb
services/rfsd_backend/: README.md  requirements.txt  test_rfsd_loader.py
services/rfsd_backend/app/: __init__.py  agent_orchestrator.py  main.py  rfsd_loader.py  schemas.py  settings.py
services/rfsd_backend/exports/: test_revenue_7722514880.xlsx
services/rfsd_backend/scripts/: check_openai.py  debug_databook.py  inspect_columns.py  test_endpoints.py
services/rfsd_backend/tests/: __init__.py  test_api.py
services/telegram_bot/: README.md  requirements.txt
services/telegram_bot/app/: main.py  rfsd_client.py  router.py  settings.py
services/telegram_bot/exports/: debug_profile_7722514880_2023.xlsx  rfsd_profile_7722514880.xlsx
src/: example.py
src/rfsd/: __init__.py  demo.py
src/rfsd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rfsd/analysis/: __init__.py  base_pipeline.py
src/rfsd/data/: __init__.py  data_loader.py
src/rfsd/utils/: __init__.py  config.py
(+1 files in other folders)
